Fix kiddybank breaking width on mobile

--- a/src/scss/_kiddybank.scss
+++ b/src/scss/_kiddybank.scss
@@ -102,11 +102,10 @@ only screen and (                min-resolution: 2dppx) and ( max-width: 2000px)
     padding-right: $base-unit * 20;
     padding-left: $base-unit * 20;
     background-color: $white;
-  }
-  @media screen and (max-width: $mobile-breakpoint) {
-    padding-top: 0 !important;
-    padding-right: 0 !important;
-    padding-left: 0 !important;
+    @media screen and (max-width: $mobile-breakpoint) {
+      padding-right: 0 !important;
+      padding-left: 0 !important;
+    }
   }
 }
 
